# Motion

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: CompilerWarnings.cmake
examples/: CMakeLists.txt
examples/smoke/: main.cpp
src/: CMakeLists.txt
src/motion/: motion.cppm
src/motion/geometry/: geometry.cppm
src/motion/graph/: graph.cppm
src/motion/grid/: grid.cppm
src/motion/path/: path.cppm
src/motion/planning/: planning.cppm
tests/: CMakeLists.txt  tests_grid.cpp
